# jsbuffer

./: .clang-format  .eslintignore  .eslintrc.js  .gitignore  .nycrc  .prettierrc  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.base.json
cli/: DetailedErrorPrinter.ts  index.ts  jsb.HELP.txt  jsb.ts  kotlin.ts  tsconfig.json
code-generator/: FileGenerator.ts  FileGeneratorKotlin.ts  GenericName.ts  JavaScriptObjectStringify.ts  exceptions.ts  fileGeneratorUtilities.ts  functionNames.ts  helpers.ts  index.ts  stringUtilities.ts  tsconfig.json  types.ts
codec/: Codec.ts  Deserializer.ts  Serializer.ts  index.ts  tsconfig.json  utilities.ts
exception/: Exception.ts  tsconfig.json
helpers/: SchemaTestCodeGenerator.ts  index.ts  tsconfig.json
kotlin/: .gitignore
measurements/: .gitignore  index.ts  tsconfig.json
scripts/: NumberInfo.ts  create-slack-messages.ts  env.ts  generateC99Codec.ts  generateC99IntegerFallbackHeader.ts  generateRandomValues.ts  getTypeSizeMacroNameFromNumberTypeId.ts  index.ts  notify.ts  test-finished-slack-message.json  tsconfig.json
src/: ASTGenerator.ts  CMakeLists.txt  Character.ts  ErrorFormatter.ts  Tokenizer.ts  tokenTypeToString.ts  tsconfig.json
test/: ASTGenerator.ts  Codec.ts  Deserializer.ts  DetailedErrorPrinter.ts  FileGenerator.ts  FileGeneratorKotlin.ts  Request  Serializer.ts  Tokenizer.ts  User  expected-tokens-1.json  fileWithUnknownCharacter  fruit-list.json  jsb.ts  jsb_extension.jsb  jsbufferconfig.json  message  schema  schema.ts  stringUtilities.ts  testLong  testTraitOnParam  tupleTest2  (+3 more)
(+107 files in other folders)
